fixed overflow styling for text on draggable bill divs

--- a/assets/styling/styles.less
+++ b/assets/styling/styles.less
@@ -308,6 +308,7 @@ margin: 2% 4.166%;
 border-left: 10px solid @secondary-element-color;
 border-radius:@card-round-edges;
 font-size: 1.2em;
+line-height: 1.2em;
 
 }
 
@@ -368,6 +369,51 @@ border-radius: @card-round-edges;
     background-color: rgb(216, 216, 216);
     box-shadow: none;
     margin-bottom: 0;
+}
+
+
+// Ellipse of bill title on bill cards if too long
+
+/* styles for '...' */ 
+.block-with-text {
+    /* hide text if it more than N lines  */
+    overflow: hidden;
+    /* for set '...' in absolute position */
+    position: relative; 
+    /* use this value to count block height */
+    line-height: 1.2em;
+    /* max-height = line-height (1.2) * lines max number (3) */
+    max-height: 6.0em; 
+    /* fix problem when last visible word doesn't adjoin right side  */
+    // text-align: justify;  
+    /* place for '...' */
+    margin-right: 0em;
+    padding-right: 1em;
+}
+  /* create the ... */
+  .block-with-text:before {
+    /* points in the end */
+    content: '...';
+    /* absolute position */
+    position: absolute;
+    /* set position to right bottom corner of block */
+    right: 0;
+    bottom: 0;
+}
+  /* hide ... if we have text, which is less than or equal to max lines */
+  .block-with-text:after {
+    /* points in the end */
+    content: '';
+    /* absolute position */
+    position: absolute;
+    /* set position to right bottom corner of text */
+    right: 0;
+    /* set width and height */
+    width: 1em;
+    height: 1em;
+    margin-top: 0.2em;
+    /* bg color = bg color under block */
+    background: white;
 }
 
 
